--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       });
     </script>
     <script>
-      window.addEventListener('dvicemotion', function(e) {
+      window.addEventListener('devicemotion', function(e) {
             var x   = e.acceleration.x,
             y   = e.acceleration.y,
             z   = e.acceleration.z;
